--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,17 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    	
-    <wb-module deploy-name="adempiere-zk-ui">
-        		
-        <property name="context-root" value="adempiere-zk-ui"/>
-        		
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="src/main/webapp/WEB-INF/src"/>
-        		
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="client/src/main/java"/>
-        		
-        <wb-resource deploy-path="/" source-path="src/main/webapp"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/client/src/main/java"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp/WEB-INF/src"/>
-        	
-    </wb-module>
-    
+<?xml version="1.0" encoding="UTF-8"?>
+<project-modules id="moduleCoreId" project-version="1.5.0">
+	<wb-module deploy-name="zk-ui">
+		<property name="context-root" value="zk-ui"/>
+		<wb-resource deploy-path="/WEB-INF/classes" source-path="src/main/webapp/WEB-INF/src"/>
+		<wb-resource deploy-path="/WEB-INF/classes" source-path="client/src/main/java"/>
+		<wb-resource deploy-path="/" source-path="src/main/webapp"/>
+	</wb-module>
 </project-modules>
